Warning removal: use Integer.valueOf(), not constructor.